Add two zip files to test the inflater code (a zipped text file and a zipped bitmap file)

--- a/extra/work/Inflater.xcodeproj/xcshareddata/xcschemes/uzo-proc.xcscheme
+++ b/extra/work/Inflater.xcodeproj/xcshareddata/xcschemes/uzo-proc.xcscheme
@@ -54,7 +54,11 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
-            argument = "main.c.zip"
+            argument = "main.zip"
+            isEnabled = "NO">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "dice.zip"
             isEnabled = "YES">
          </CommandLineArgument>
       </CommandLineArguments>
