XCODE CONFIG: enable to treat implicit C function declarations as errors

--- a/extra/work/Inflater.xcodeproj/xcshareddata/xcschemes/uzo-proc.xcscheme
+++ b/extra/work/Inflater.xcodeproj/xcshareddata/xcschemes/uzo-proc.xcscheme
@@ -55,7 +55,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "main.zip"
-            isEnabled = "NO">
+            isEnabled = "YES">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "dice.zip"
